Changelog
=========

4.16-dev - (unreleased)
-----------------------

4.15 - (2012-02-06)
-------------------
 * Change: disabled crop functionality until it is better tested to ensure 
   that no issues would arrive from using it [ichimdav]

4.14 - (2012-02-06)
-------------------
 * Feature: added 16:9 crop functionality for IExternalHighlight contentTypes
   [ichimdav #4816]
 * Bug fix: fixed rss feed for at topics [tiberich #4992]
 * Bug fix: Fixed location field and widget on Event content types
   [ghicaale #4913]
 * Bug fix: Fixed iCal export for Event content types
   [ghicaale #4913]
 * Bug fix: Fixed Google geocoding used on Event and QuickEvent content types
   [ghicaale #4913]
 * Bug fix: Fixed geocoding subscriber to be active only for Event and QuickEvent content types
   [ghicaale #4913]
 * Bug fix: show body text on events [demarant #4906]
 * Feature: Enabled the EEA relation widget on highlights types [demarant #4705]
 * Change: Made field visibilityLevel hidden by default and visible only
           for articles where we use it for frontpage feature article. [demarant]
 * Bug fix: Fixed Content-Disposition for PDF files [voineali #4898]
 * Bug fix: fixed overlapping text in organisational chart and
            replaced deprecated css_slot with style_slot [demarant]
 * Change: Mark any Daviz presentation with Interactive Data interface. [demarant]
 * Bug fix: replaced attribute modifiedDate (introduced in r24888 and not found
            with new plone 4) with standard dublic core modified() method.
            [demarant #4875]

4.13 - (2012-01-10)
-------------------
 * Bug fix: added an override utility for p4a.videoembed that will not change
   Links with swf in their url into Videos [tiberich #4865]
 * Bug fix: Fixed portal status message on @@sendAsNotification
   [voineali #4706]
 * Bug fix: fixed reorder resources views [tiberich #4737]

4.12 - (2012-01-03)
-------------------